src/objects/Iowa_Referral__c.object
<CustomObject>
    <description>RWN IA Referrals</description>
    <fields>
        <fullName>Accessibility_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessibility Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this referral still active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admit_Date__c</fullName>
        <label>Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admit_Location__c</fullName>
        <label>Admit Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(today()- Date_of_Birth__c )/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Female__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Male__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambulatory__c</fullName>
        <label>Ambulatory</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_Desired__c</fullName>
        <label>Area Desired</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awake_Staff_needed__c</fullName>
        <label>Awake Staff needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Worker_Phone__c</fullName>
        <label>Case Worker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case_Worker__c</fullName>
        <label>Case Worker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this referral closed</description>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Admitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admitted to another provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behaviorally not able to serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Manager not responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility enviroment not appealing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medically not able to serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No accessbile housing available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not all gender environments avaiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program does not meet needs of person or family wants</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Referral Source County</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_of_Pay__c</fullName>
        <label>County of Pay</label>
        <picklist>
            <picklistValues>
                <fullName>Adair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allamakee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appanoose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audubon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hawk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bremer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchanan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buena Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calhoun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerro Gordo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherokee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chickasaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decatur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dickinson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County_of_Residence__c</fullName>
        <label>County of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>Adair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allamakee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appanoose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audubon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hawk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bremer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buchanan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buena Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calhoun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerro Gordo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherokee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chickasaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clayton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decatur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dickinson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Diagnosis__c</fullName>
        <label>Date of Diagnosis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_1__c</fullName>
        <label>Diagnosis #1</label>
        <picklist>
            <picklistValues>
                <fullName>ABI / TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism (ASD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Disablity (ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health (MH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnosis_2__c</fullName>
        <label>Diagnosis #2</label>
        <picklist>
            <picklistValues>
                <fullName>ABI / TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism (ASD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Disablity (ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health (MH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diagnosis_3__c</fullName>
        <label>Diagnosis #3</label>
        <picklist>
            <picklistValues>
                <fullName>ABI / TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism (ASD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Disablity (ID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health (MH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extreme_Unwanted_Behaviors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extreme Unwanted Behaviors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <picklist>
            <picklistValues>
                <fullName>BI Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Habilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Pay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guardianship_Status__c</fullName>
        <label>Guardianship Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Characteristics__c</fullName>
        <label>Key Characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>Sex Offender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 - Under</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extreme Unwanted Behaviors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mixed Diagnosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mixed_Diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mixed Diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant_Notes__c</fullName>
        <label>Participant Notes</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <label>Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Owner__c</fullName>
        <label>Referral Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source_City__c</fullName>
        <label>Referral Source City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Email__c</fullName>
        <label>ReferralSourceEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Fax__c</fullName>
        <label>Referral Source Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Phone__c</fullName>
        <label>Referral Source Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referral_Source_State__c</fullName>
        <label>Referral Source State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Street_Address__c</fullName>
        <label>Referral Source Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Zip_Code__c</fullName>
        <label>Referral Source Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrral_Source_Office_Phone__c</fullName>
        <label>Referral Source Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Application_Completed__c</fullName>
        <label>Service Application Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>HCBS - Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICF - Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICF - Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCBS - Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSCL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sex_Offender__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sex Offender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Date__c</fullName>
        <label>Soft Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Soft_Tag__c</fullName>
        <label>Soft Tag</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <label>Status Comments</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_1_Date__c</fullName>
        <label>Update #1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_1_notes__c</fullName>
        <label>Update #1</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_2_Date__c</fullName>
        <label>Update #2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_2__c</fullName>
        <label>Update #2</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_3_Date__c</fullName>
        <label>Update #3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_3__c</fullName>
        <label>Update #3</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_4__c</fullName>
        <label>Update #4</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X17_Under__c</fullName>
        <defaultValue>false</defaultValue>
        <label>17-Under</label>
        <type>Checkbox</type>
    </fields>
    <label>Iowa Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iowa Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>